# gfcc

./: CMakeLists.txt  README.md
.github/workflows/: github_actions.yml
ci/reference_output/: co.cc-pvdz.ccsd.json
ci/scripts/: compare_results.py
contrib/CMakeBuild/: CMakeLists.txt
contrib/CMakeBuild/CMakeBuild/: CMakeLists.txt
contrib/CMakeBuild/cmake/: NWChemExTargetConfig.cmake.in
contrib/CMakeBuild/cmake/build_external/: BuildAntlrCppRuntime.cmake  BuildBLAS.cmake  BuildBLIS.cmake  BuildCMakeBuild.cmake  BuildEigen3.cmake  BuildGauXC.cmake  BuildGlobalArrays.cmake  BuildHDF5.cmake  BuildHPTT.cmake  BuildLAPACK.cmake  BuildLibInt2.cmake  BuildMSGSL.cmake  BuildTALSH.cmake
contrib/CMakeBuild/cmake/build_external/BLIS/: CMakeLists.txt
contrib/CMakeBuild/cmake/build_external/CBLAS/: CMakeLists.txt
contrib/CMakeBuild/cmake/build_external/GlobalArrays/: CMakeLists.txt
contrib/CMakeBuild/cmake/build_external/LAPACK/: CMakeLists.txt
contrib/CMakeBuild/cmake/build_external/LAPACKE/: CMakeLists.txt
contrib/CMakeBuild/cmake/build_external/NWX_Catch/: CMakeLists.txt
contrib/CMakeBuild/cmake/find_external/: CommonFunctions.cmake  FindAntlrCppRuntime.cmake  FindBLAS.cmake  FindBLIS.cmake  FindCBLAS.cmake  FindGauXC.cmake  FindGlobalArrays.cmake  FindHPTT.cmake  FindIbverbs.cmake  FindLAPACK.cmake  FindLAPACKE.cmake  FindLibM.cmake  FindLibRT.cmake  FindMAGMA.cmake  FindMSGSL.cmake  FindTALSH.cmake
contrib/CMakeBuild/cmake/find_external/linalg-modules/: FindBLIS.cmake  FindIBMESSL.cmake  FindIntelMKL.cmake  FindReferenceBLAS.cmake  FindReferenceLAPACK.cmake
contrib/CMakeBuild/cmake/macros/: BuildNWChemExModule.cmake  DependencyMacros.cmake  TargetMacros.cmake
contrib/TAMM/: CMakeLists.txt
contrib/TAMM/cmake/: check_user_env.cmake
contrib/TAMM/dox/: README.md
contrib/TAMM/src/tamm/: CMakeLists.txt  tamm_utils.hpp
contrib/TAMM/tests/: CMakeLists.txt
contrib/TAMM/tests/tamm/: Test_Eigen.cpp  Test_Tensors.cpp  test_tamm.cmake
contrib/TAMM/utils/: ccsd_t_cache_stats.py
contrib/basis/: 6-31++g*.g94
docs/: FAQ.md  install.md
driver/: CCSD_CS.cpp  CCSD_T.cpp  CCSD_T_CS.cpp  CD_CCSD.cpp  CMakeLists.txt  CholeskyDecomp.cpp  HartreeFock.cpp
src/gfcc/: CMakeLists.txt  gf_ccsd.hpp
src/gfcc/contrib/: ccsd_util.hpp  cd_ccsd_common_cs.hpp  cd_svd_ga.hpp  hartree_fock_tamm.hpp  hf_common.hpp  hf_sched.hpp  hf_tamm_common.hpp  input_parser.hpp  linalg.hpp  two_index_transform.hpp
src/gfcc/contrib/ccsd_t/: hybrid.cpp
tests/: c60.json  co.json  co.nwx  cytosine.json  example.json  guanine.json  guanine_cytosine_2bp.json  guanine_cytosine_3bp.json  guanine_cytosine_bp.json  h2o.json
tests/sample_outputs/: co.out
